fix federal agency icon spacing

--- a/client/src/stylesheets/federal_agencies.css
+++ b/client/src/stylesheets/federal_agencies.css
@@ -1,9 +1,17 @@
 .federal-agency-icon {
-  width: 40px;
-  height: 40px;
+  width: 45px;
+  height: 45px;
+}
+
+.federal-agency-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 100%;
-  border: 2px solid black;
-  margin: 10px;
+  border: 1px solid black;
+  background-color: white;
+  margin: 5px;
+  overflow: hidden;
 }
 
 .agencies-images {
